# mysql-udf-curl

./: .gitignore  Makefile.am  acinclude.m4  autogen.sh  configure.in  mysql_udf_curl.c
