dnl $Id: configure.in,v 1.10 2005/09/21 05:28:49 moriyoshi Exp $
sinclude([pkg.m4])

AC_PREREQ([2.57])
AC_INIT(mysql_udf_curl, 0.1)
AM_INIT_AUTOMAKE(mysql_udf_curl.c, 0.1)
AC_CONFIG_SRCDIR(mysql_udf_curl.c)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_SUBST(PACKAGE_VERSION)
AC_SUBST(PACKAGE_NAME)
AC_SUBST(PACKAGE_TARNAME)

enable_static="no"
enable_shared="yes"

AC_PROG_YACC
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_HEADER_STDC
AC_CHECK_HEADERS([string.h strings.h sys/types.h sys/stat.h fcntl.h syslog.h unistd.h stdarg.h errno.h crypt.h])
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE
AC_C_STRINGIZE
AC_TYPE_PID_T

AC_FUNC_ALLOCA
AC_FUNC_MALLOC
AC_FUNC_MEMCMP

AC_CHECK_SIZEOF([char])
AC_CHECK_SIZEOF([short])
AC_CHECK_SIZEOF([int])
AC_CHECK_SIZEOF([long])

LIBCURL_CHECK_CONFIG

AC_ARG_WITH([mysql], [  --with-mysql=PREFIX     specify MySQL installation prefix], [
  MYSQL_CHECK_LIBMYSQLCLIENT(["$withval"])
], [
dnl try autodetection...
  MYSQL_CHECK_LIBMYSQLCLIENT([/usr /usr/local /usr/mysql /opt/mysql])
])
AC_ARG_WITH([doc-lang], [  -with-doc-lang=[LANG]    specify documentation language (default: English)], [
  DOC_LANG="$withval"
], [
  DOC_LANG="English"
])

AC_SUBST(INCLUDES)
AC_SUBST(MYSQL_LIB_DIR)
AC_SUBST(MYSQL_PLUGIN_DIR)
AC_SUBST(DOC_LANG)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

dnl vim600: sts=2 sw=2 ts=2 et

